--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       </div>
     </nav>
 
-    <section class="relative bg-deepBlue w-full">
+    <section class="relative bg-deepBlue w-full pb-12 pt-4">
       <div
         class="flex lg:flex-row flex-col mx-auto max-w-[1080px] w-10/12 justify-between items-center"
       >
@@ -579,13 +579,13 @@
             src="./images/x-flame-1.png"
             alt=""
             loading="lazy"
-            class="absolute -top-[142px] -left-[142px] w-[200px]"
+            class="absolute -top-[142px] -left-[142px] w-[200px] hidden 2xl:block"
           />
           <img
             src="./images/x-flame-2.png"
             alt=""
             loading="lazy"
-            class="absolute top-[150px] -right-[180px] w-[270px]"
+            class="absolute top-[150px] -right-[180px] w-[270px]  hidden 2xl:block"
           />
 
           <div
@@ -842,13 +842,13 @@
           src="./images/dotted_rows1.jpg"
           alt=""
           loading="lazy"
-          class="absolute w-[233px] left-[170px] -top-[6rem] -z-10 opacity-30"
+          class="absolute w-[233px] left-[170px] -top-[6rem] -z-10 opacity-30 hidden sm:block"
         />
         <img
           src="./images/dotted_rows1.jpg"
           alt=""
           loading="lazy"
-          class="absolute w-[233px] -right-[7.5rem] -top-[10rem] -z-10 opacity-30"
+          class="absolute w-[233px] right-[7.5rem] -top-[10rem] -z-10 opacity-30 hidden md:block"
         />
 
         <div class="w-full grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-y-10 gap-x-4 relative z-10">
@@ -1145,7 +1145,7 @@
                 <p class="font-mullish">We make it easier for you to focus on building great products while we work on simplifying your payments. Become one of us by joining thousands of our happy users and simplify the online payment experience for your customers.</p>
                 <p class="font-mullish mt-6">Focus on your business while we handle the complexities of payments for you.</p>
             </div>
-            <div class="h-[500px] w-[500px] relative overflow-y-hidden mx-auto">
+            <div class="h-[500px] w-10/12 relative overflow-y-hidden mx-auto sm:width-[500px]">
                 <div style="background: linear-gradient(180deg, #f4f8ff, #fff0);"
                 class="absolute w-full h-[150px] top-0 z-50">
                      
@@ -1164,14 +1164,14 @@
             <img src="./images/dotted_rows1.jpg" alt="" class="absolute w-[200px] top-[8rem] left-[2rem] opacity-30 -z-10">
             <h2 class="font-mullish font-bold text-2xl text-deepBlueHead text-center">An Experience <br>people love to talk about! </h2>
             <div class="w-6 h-1 bg-greenLight mx-auto my-4"></div>
-            <button class="w-[100px] h-[100px] bg-[#f4f8ff] rounded-full absolute left-0 top-1/2 flex justify-center items-center rotate-180">
+            <button class="w-[100px] h-[100px] bg-[#f4f8ff] rounded-full absolute left-0 top-1/2 hidden justify-center items-center rotate-180 sm:flex">
                 <div class="w-[65%] h-[65%] bg-[#f4f8ff] rounded-full flex justify-center items-center mix-blend-multiply">
                     <i
                     data-feather="chevron-right" class="stroke-[5px] w-6 h-6 md:w-10 md:h-10 text-gray-400" ></i>
                 </div>
             </button>
 
-            <button class="w-[100px] h-[100px] bg-[#f4f8ff] rounded-full absolute right-0 top-1/2 flex justify-center items-center">
+            <button class="w-[100px] h-[100px] bg-[#f4f8ff] rounded-full absolute right-0 top-1/2 hidden justify-center items-center sm:flex">
                 <div class="w-[65%] h-[65%] bg-[#f4f8ff] rounded-full flex justify-center items-center mix-blend-multiply">
                     <i
                     data-feather="chevron-right" class="stroke-[5px] w-6 h-6 md:w-10 md:h-10 text-gray-400" ></i>
